[package]
name = "branka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
base-x = "*"
speedy = "*"
flate2 = {version = "1"}
byteorder = "1.4.3"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

[dev-dependencies]
getrandom = "0.2.8"
branca = "0.10"
criterion = {version = "0.4.0", features = ["html_reports"]}

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true